# model-fc

./: .gitignore  environment.yml  files.py  main.py  models.py  pyproject.toml  ruff.toml  utils.py
.github/workflows/: test.yml
model_fc/: models.py
processing/: calc_fc.py  extract_timeseries.py
src/model_fc/: files.py  models.py
test/: test_models.py
