[project]
name = "model_fc"

dynamic = ["version"]
authors = [
  {name="McKenzie Hagen", email="mphagen@uw.edu"}

]
description = "calculating model-based connectomes"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
] 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["model-fc*"]
namespaces = false